# FIUTR

./: AndroidManifest.xml  README.md
client/: .classpath  .project  AndroidManifest.xml  AndroidManifest.xml.orig  project.properties
client/res/layout/: activity_main.xml  activity_scan.xml  activity_search.xml  activity_start.xml  activity_test.xml  activity_viewall.xml  activity_wifi.xml  list_networks.xml  list_viewall.xml
client/res/menu/: scan.xml
client/res/values/: dimens.xml  strings.xml
client/src/com/example/fiutr/: AboutActivity.java  GPSHandler.java  LocationNetwork.java  MainActivity.java  MainActivity.java.orig  Network.java  NetworkAdapterItem.java  NetworkAdapterItem.java.orig  ScanActivity.java  ScanActivity.java.orig  SearchActivity.java  ServerHandler.java  StartActivity.java  TestAdapterItem.java  ViewAllActivity.java  ViewAllActivity.java.orig  WiFiHandler.java  WifiAdapterItem.java  WifiTester.java
res/layout/: activity_about.xml
res/menu/: main.xml
server/: AUTHORS  BUGS  Makefile.am  README  autogen.sh  configure.ac  git.mk
server/data/: Makefile.am  groupgd.service  groupgd.service.in  groupgd.socket
server/src/: Makefile.am  connection.cc  connection.h  connection_manager.cc  connection_manager.h  database.cc  database.h  db-manager.cc  main.cc  network.cc  network.h  test-groupgd.cc  test-network.cc  utility.cc  utility.h
server/tools/: Makefile.am  delete-db.cc
src/com/example/fiutr/: SearchActivity.java  ViewAllActivity.java
